# Effective-Modern-Cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  c++14_compilers.txt  compilers.txt  configure.sh
Item01_Understand_template_type_deduction/: CMakeLists.txt  array-to-pointer_decay_rule.cpp  array_and_pointer_parameter_equivalence.cpp  arrays_by_reference.cpp  arrays_by_value.cpp  case1_const.cpp  case1_non_const.cpp  case1_pointer.cpp  case2_uref.cpp  case3_pass_by_value.cpp  deduce_nb_array_elements.cpp  function-to-pointer_decay_rule.cpp  pinch_of_pseudocode.cpp  things_to_remember.txt
Item02_Understand_auto_type_deduction/: CMakeLists.txt  auto_deduction_vs_template_deduction.cpp  auto_type_deduction.cpp  function_return_type_deduction.cpp  things_to_remember.txt
Item03_Understand_decltype/: CMakeLists.txt  compute_function_return_type_cpp11.h  compute_function_return_type_cpp14.h  decltype_auto_for_function_return_types_cpp14.cpp  decltype_auto_for_normal_auto_variables_cpp14.cpp  decltype_for_complicated_lvalues.cpp  problem.cpp  return_statements_cpp14.cpp  string_deque.cpp  things_to_remember.txt  typical_cases.cpp  uref_cpp11.h  uref_cpp14.h
Item04_Know_how_to_view_deduced_types/: CMakeLists.txt  beyond_typeid.cpp  boost_type_index.cpp  compiler_diagnostics.cpp  ide_editors.cpp  runtime_output01.cpp  runtime_output02.cpp  things_to_remember.txt
Item07_Distinguish_between()_and_{}_when_creating_objects/: CMakeLists.txt  constructor_overload_resolution.cpp  empty_braces.cpp  empty_braces_test_v1.cpp  empty_braces_test_v2.cpp  initialization_values.cpp  initializer_lists1.cpp  initializer_lists2.cpp  initializer_lists3.cpp  initializer_lists4.cpp  parenthesis_braces_in_templates.cpp  things_to_remember.txt  vector_construction.cpp
Item08_Prefer_nullptr_to_0_and_NULL/: CMakeLists.txt  code_clarity.cpp  pointer_overload.cpp  template_example_flat.cpp  template_example_templatized.cpp  template_example_templatized_cpp14.cpp  things_to_remember.txt
Item09_Prefer_alias_declarations_to_typedefs/: CMakeLists.txt  function_pointers.cpp  linked_list_synonym_with_alias_template01.cpp  linked_list_synonym_with_alias_template02.cpp  linked_list_synonym_with_typedef01.cpp  linked_list_synonym_with_typedef02.cpp  things_to_remember.txt  wine.cpp
Item10_Prefer_scoped_enums_to_unscoped_enums/: CMakeLists.txt  compilation_dependencies.cpp  forward_declared_enums.cpp  forward_declaring.cpp  scoped_enums.cpp  semantic_travesties01.cpp  semantic_travesties02.cpp  semantic_travesties03.cpp  things_to_remember.txt  underlying_type01.cpp  underlying_type02.cpp  unscoped_enums.cpp  unscoped_enums_useful01.cpp  unscoped_enums_useful02.cpp  unscoped_enums_useful03.cpp  unscoped_enums_useful04.cpp  unscoped_enums_useful04_cpp14.cpp
Item12_Declare_overriding_functions_override/: CMakeLists.txt  override_games.cpp  override_legacy_code.cpp  overriding_explained.cpp  reference-qualified_member_functions_use_case_problem_demonstration.cpp  reference-qualified_member_functions_use_case_problem_solution.cpp  reference_qualifiers_example.cpp  things_to_remember.txt  typical_errors.cpp  typical_errors_corrected.cpp  typical_errors_with_override_added.cpp
Item13_Prefer_const_iterators_to_iterators/: CMakeLists.txt  insertion_cpp11.cpp  insertion_cpp14.cpp  insertion_cpp98.cpp  non_member_cbegin.h  things_to_remember.txt
Item15_Use_constexpr_whenever_possible/: CMakeLists.txt  Point_cpp11.h  Point_cpp14.h  constexpr_for_user-defined_types_cpp11.cpp  constexpr_for_user-defined_types_cpp14.cpp  constexpr_functions_cpp11.cpp  constexpr_functions_cpp14.cpp  constexpr_user-defined_types_cpp11.cpp  constexpr_user-defined_types_cpp14.cpp  constexpr_variables.cpp  things_to_remember.txt
Item18_Use_std_unique_ptr_for_exclusive-ownership_resource_management/: CMakeLists.txt  conversion_unique_to_shared.cpp  custom_deleter_size.cpp  investment.h  investments_cpp11.cpp  investments_cpp14.cpp  things_to_remember.txt  utils.h
Item21_Prefer_std_make_unique_and_std_make_shared_to_direct_use_of_new/: CMakeLists.txt  limitations_of_make_functions.cpp  reasons_for_preferring_make_functions.cpp  selfwritten_make_unique.cpp  things_to_remember.txt
Item23_Understand_std_move_and_std_forward/: CMakeLists.txt  annotation.cpp  move_constructor_with_forward.cpp  move_constructor_with_move.cpp  std_move_in_cpp11.cpp  std_move_in_cpp14.cpp  things_to_remember.txt  typical_use_of_std_forward.cpp  typical_use_of_std_forward.h
Item24_Distinguish_universal_references_from_rvalue_references/: CMakeLists.txt  no_type_deduction.cpp  record_time.cpp  rrefs_examples.cpp  things_to_remember.txt  urefs_contexts.cpp  urefs_form.cpp  urefs_initialization.cpp
Item25_Use_std_move_on_rvalue_references_std_forward_on_universal_references/: CMakeLists.txt  dont_use_move_with_urefs.cpp  dont_use_move_with_urefs_solution.cpp  matrix.cpp  move_or_forward_only_on_final_use.cpp  reduce_and_copy.cpp  return_value_optimization.cpp  rrefs_are_moveable.cpp  things_to_remember.txt  urefs_maybe_moveable.cpp
Item27_Familiarize_yourself_with_alternatives_to_overloading_on_universal_references/: CMakeLists.txt  alternative_pass_by_value.cpp  constraining_templates01.cpp  constraining_templates02_cpp11.cpp  constraining_templates02_cpp14.cpp  constraining_templates03_cpp14.cpp  constraining_templates04_cpp14.cpp  tag_dispatch01.cpp  tag_dispatch02.cpp  things_to_remember.txt
Item28_Understand_reference_collapsing/: CMakeLists.txt  conceptual_std_forward_implementation_cpp11.h  conceptual_std_forward_implementation_cpp14.h  reference_collapsing_contexts01.cpp  reference_collapsing_contexts01.h  reference_collapsing_contexts02.cpp  reference_collapsing_contexts02.h  refs_to_refs.cpp  std_forward_common_usecase.h  things_to_remember.txt
Item30_Familiarize_yourself_with_perfect_forwarding_failure_cases/: CMakeLists.txt  bitfields.cpp  braced_initializers.cpp  core_of_forwarding.h  declaration-only_integral_static_const_data_members.cpp  null_pointers.cpp  overloaded_function_names_and_template_names.cpp  (+1 more)
(+137 files in other folders)
