set_source_files_properties(overriding_explained.cpp PROPERTIES COMPILE_FLAGS -std=c++14)

add_executable(overriding_explained overriding_explained.cpp)
add_executable(reference_qualifiers_example reference_qualifiers_example.cpp)
add_library(typical_errors typical_errors.cpp)
add_library(typical_errors_with_override_added typical_errors_with_override_added.cpp)
add_library(typical_errors_corrected typical_errors_corrected.cpp)
add_library(override_legacy_code override_legacy_code.cpp)
add_library(override_games override_games.cpp)
add_executable(reference-qualified_member_functions_use_case_problem_demonstration reference-qualified_member_functions_use_case_problem_demonstration.cpp)
add_executable(reference-qualified_member_functions_use_case_problem_solution reference-qualified_member_functions_use_case_problem_solution.cpp)
