add_executable(software_threads software_threads.cpp)
target_link_libraries(software_threads pthread)

add_executable(task_based_approach task_based_approach.cpp)
target_link_libraries(task_based_approach pthread)

add_executable(thread_based_approach thread_based_approach.cpp)
target_link_libraries(thread_based_approach pthread)
