#add_executable(default_launch_policy default_launch_policy.cpp)

#add_executable(guaranteeing_truly_asynchronous_execution guaranteeing_truly_asynchronous_execution.cpp)

#add_executable(interesting_implications interesting_implications.cpp)

#add_executable(really_async_cpp11 really_async_cpp11.cpp)

#set_source_files_properties(really_async_cpp14.cpp PROPERTIES COMPILE_FLAGS "-std=c++14 -stdlib=libc++")
#add_executable(really_async_cpp14 really_async_cpp14.cpp)

#add_executable(thread_local_storage thread_local_storage.cpp)

#add_executable(wait-based_loops wait-based_loops.cpp)

#add_executable(wait-based_loops_fixed wait-based_loops_fixed.cpp)
